# app-arbore-binar

./: .clang-format  .gitignore  CMakeLists.txt  README.md
lib/: AfisareArbore.py  ArboreBinar.cpp  ArboreBinar.h  afisare_arbore.py
src/: componente.cpp  componente.h  globale.h  main.cpp  utilitare.cpp  utilitare.h
